// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`non-pretty: pretty/quoting-1.sql 1`] = `
"CREATE FUNCTION faker.float(min double precision DEFAULT 0, max double precision DEFAULT 100) RETURNS double precision AS $$
BEGIN
  RETURN min + random() * (max - min);
END;
$$ LANGUAGE plpgsql"
`;

exports[`non-pretty: pretty/quoting-2.sql 1`] = `
"CREATE FUNCTION faker.float(min double precision DEFAULT 0, max double precision DEFAULT 100) RETURNS double precision AS $$
BEGIN
  RETURN min + random() * (max - min);
END;
$$ LANGUAGE plpgsql"
`;

exports[`non-pretty: pretty/quoting-3.sql 1`] = `
"CREATE FUNCTION faker.interval(min int, max int) RETURNS interval AS $$
BEGIN
  RETURN make_interval(secs => (min + floor(random() * (max - min + 1)))::int);
END;
$$ LANGUAGE plpgsql"
`;

exports[`non-pretty: pretty/quoting-4.sql 1`] = `
"CREATE FUNCTION faker.interval(min int, max int) RETURNS interval AS $$
BEGIN
  RETURN make_interval(secs => (min + floor(random() * (max - min + 1)))::int);
END;
$$ LANGUAGE plpgsql"
`;

exports[`non-pretty: pretty/quoting-5.sql 1`] = `
"CREATE FUNCTION faker.boolean() RETURNS boolean AS $$
BEGIN
  RETURN random() < 0.5;
END;
$$ LANGUAGE plpgsql"
`;

exports[`non-pretty: pretty/quoting-6.sql 1`] = `
"CREATE FUNCTION faker.boolean() RETURNS boolean AS $$
BEGIN
  RETURN random() < 0.5;
END;
$$ LANGUAGE plpgsql"
`;

exports[`non-pretty: pretty/quoting-7.sql 1`] = `"CREATE DOMAIN origin AS text CHECK (value = pg_catalog.substring(value, '^(https?://[^/]*)'))"`;

exports[`non-pretty: pretty/quoting-8.sql 1`] = `"SELECT '{"a":1}'::json"`;

exports[`non-pretty: pretty/quoting-9.sql 1`] = `"SELECT '{"b":2}'::jsonb"`;

exports[`non-pretty: pretty/quoting-10.sql 1`] = `"SELECT CAST(true AS boolean)"`;

exports[`non-pretty: pretty/quoting-11.sql 1`] = `"SELECT '1 day'::interval"`;

exports[`non-pretty: pretty/quoting-12.sql 1`] = `"SELECT 42::int"`;

exports[`non-pretty: pretty/quoting-13.sql 1`] = `"INSERT INTO test_table (data) VALUES ('{"c":3}'::json)"`;

exports[`non-pretty: pretty/quoting-14.sql 1`] = `"SELECT CAST('{"d":4}' AS myschema.json)"`;

exports[`non-pretty: pretty/quoting-15.sql 1`] = `"SELECT CAST(100 AS custom.int)"`;

exports[`non-pretty: pretty/quoting-16.sql 1`] = `"SELECT CAST(true AS myapp.boolean)"`;

exports[`pretty: pretty/quoting-1.sql 1`] = `
"CREATE FUNCTION faker.float(
  min double precision DEFAULT 0,
  max double precision DEFAULT 100
) RETURNS double precision AS $$
BEGIN
  RETURN min + random() * (max - min);
END;
$$ LANGUAGE plpgsql"
`;

exports[`pretty: pretty/quoting-2.sql 1`] = `
"CREATE FUNCTION faker.float(
  min double precision DEFAULT 0,
  max double precision DEFAULT 100
) RETURNS double precision AS $$
BEGIN
  RETURN min + random() * (max - min);
END;
$$ LANGUAGE plpgsql"
`;

exports[`pretty: pretty/quoting-3.sql 1`] = `
"CREATE FUNCTION faker.interval(
  min int,
  max int
) RETURNS interval AS $$
BEGIN
  RETURN make_interval(secs => (min + floor(random() * (max - min + 1)))::int);
END;
$$ LANGUAGE plpgsql"
`;

exports[`pretty: pretty/quoting-4.sql 1`] = `
"CREATE FUNCTION faker.interval(
  min int,
  max int
) RETURNS interval AS $$
BEGIN
  RETURN make_interval(secs => (min + floor(random() * (max - min + 1)))::int);
END;
$$ LANGUAGE plpgsql"
`;

exports[`pretty: pretty/quoting-5.sql 1`] = `
"CREATE FUNCTION faker.boolean() RETURNS boolean AS $$
BEGIN
  RETURN random() < 0.5;
END;
$$ LANGUAGE plpgsql"
`;

exports[`pretty: pretty/quoting-6.sql 1`] = `
"CREATE FUNCTION faker.boolean() RETURNS boolean AS $$
BEGIN
  RETURN random() < 0.5;
END;
$$ LANGUAGE plpgsql"
`;

exports[`pretty: pretty/quoting-7.sql 1`] = `
"CREATE DOMAIN origin AS text 
  CHECK (value = pg_catalog.substring(value, '^(https?://[^/]*)'))"
`;

exports[`pretty: pretty/quoting-8.sql 1`] = `"SELECT '{"a":1}'::json"`;

exports[`pretty: pretty/quoting-9.sql 1`] = `"SELECT '{"b":2}'::jsonb"`;

exports[`pretty: pretty/quoting-10.sql 1`] = `"SELECT CAST(true AS boolean)"`;

exports[`pretty: pretty/quoting-11.sql 1`] = `"SELECT '1 day'::interval"`;

exports[`pretty: pretty/quoting-12.sql 1`] = `"SELECT 42::int"`;

exports[`pretty: pretty/quoting-13.sql 1`] = `
"INSERT INTO test_table (
  data
) VALUES
  ('{"c":3}'::json)"
`;

exports[`pretty: pretty/quoting-14.sql 1`] = `"SELECT CAST('{"d":4}' AS myschema.json)"`;

exports[`pretty: pretty/quoting-15.sql 1`] = `"SELECT CAST(100 AS custom.int)"`;

exports[`pretty: pretty/quoting-16.sql 1`] = `"SELECT CAST(true AS myapp.boolean)"`;
